# astapy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
astapy/: __init__.py  angle.py  astapy.py  stream.py  wcs.py
