[project]
name = "astapy"
version = "0.1.1"
description = "Python wrapper around the ASTAP CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Muhammad Ali Syaifudi", email = "muhammad.ali.syaifudin@hotmail.com" },
]
dependencies = []
keywords = [
  "astap",
  "plate solver",
  "alignment",
  "wrapper",
  "astronomy",
  "astrometry",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX",
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["astapy"]
